[tool.poetry]
name = "pyasm"
version = "0.0.1"
description = "A library for low-level abstract use to high-level."
authors = ["Jhonata Rios Carneiro <jhonatacarneirorios432@gmail.com>"]
license = "MIT"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

readme = "README.md"
homepage = "https://github.com/Jhonataplayyt/pyasm"
repository = "https://github.com/Jhonataplayyt/pyasm"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
pyasm = "pyasm.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
